# happyterminals

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HUMAN-UAT.md  LICENSE-APACHE  LICENSE-MIT  README.md  project.eclusa  project.md  rust-toolchain.toml
.eclusa/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.eclusa/backlog/: 999.x-shading-ramp-strategies.md
.eclusa/codebase/: ARCHITECTURE.md  CONCERNS.md  QUALITY.md
.eclusa/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.eclusa/phases/00-workspace-hygiene-foundation/: 00-01-workspace-deps-crate-scaffold-PLAN.md  00-02-licensing-contribution-changelog-PLAN.md  00-03-vendor-relocation-toolchain-PLAN.md  00-04-docs-rewrite-doc-lint-PLAN.md  00-05-github-actions-ci-PLAN.md  00-CONTEXT.md  00-RESEARCH.md  00-VERIFICATION.md
.eclusa/phases/01.0-reactive-core/: 01.0-01-cargo-module-scaffold-PLAN.md  01.0-02-SUMMARY.md  01.0-02-signal-memo-batch-PLAN.md  01.0-02b-SUMMARY.md  01.0-02b-lib-reexports-PLAN.md  01.0-03-effect-owner-cleanup-PLAN.md  01.0-04-SUMMARY.md  01.0-04-clock-rng-errors-PLAN.md  01.0-05-SUMMARY.md  01.0-05-tests-benches-docs-PLAN.md  01.0-CONTEXT.md  01.0-RESEARCH.md  01.0-VERIFICATION.md
.eclusa/phases/01.1-grid-ratatui-backend-static/: 01.1-01-PLAN.md  01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-03-PLAN.md  01.1-03-SUMMARY.md  01.1-CONTEXT.md  01.1-RESEARCH.md  01.1-VALIDATION.md  01.1-VERIFICATION.md
.eclusa/phases/01.2-pipeline-tachyonfx-adapter/: 01.2-01-PLAN.md  01.2-01-SUMMARY.md  01.2-02-PLAN.md  01.2-02-SUMMARY.md  01.2-CONTEXT.md  01.2-DISCUSSION-LOG.md  01.2-RESEARCH.md  01.2-VALIDATION.md  01.2-VERIFICATION.md
.eclusa/phases/01.3-minimal-3d-renderer-cube-primitive/: 01.3-01-PLAN.md  01.3-01-SUMMARY.md  01.3-02-PLAN.md  01.3-02-SUMMARY.md  01.3-CONTEXT.md  01.3-RESEARCH.md  01.3-VALIDATION.md  01.3-VERIFICATION.md
.eclusa/phases/01.4-scene-ir-rust-builder-dsl/: 01.4-01-PLAN.md  01.4-01-SUMMARY.md  01.4-02-PLAN.md  01.4-02-SUMMARY.md  01.4-CONTEXT.md  01.4-RESEARCH.md  01.4-VALIDATION.md  01.4-VERIFICATION.md
.eclusa/phases/01.5-spinning-cube-demo-cross-terminal-matrix-m1-exit/: 01.5-01-PLAN.md  01.5-01-SUMMARY.md  01.5-02-PLAN.md  01.5-02-SUMMARY.md  01.5-03-PLAN.md  01.5-03-SUMMARY.md  01.5-CONTEXT.md  01.5-RESEARCH.md  01.5-VALIDATION.md  01.5-VERIFICATION.md
.eclusa/phases/02.1-obj-mesh-loading/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  (+9 more)
.eclusa/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.github/workflows/: ci.yml
crates/happyterminals/: Cargo.toml  README.md
crates/happyterminals-backend-ratatui/: Cargo.toml  README.md
crates/happyterminals-backend-ratatui/src/: color.rs  event.rs  frame_spec.rs  guard.rs  lib.rs  run.rs
crates/happyterminals-backend-ratatui/src/color/: palette.rs
crates/happyterminals-backend-ratatui/tests/: color_detect.rs  color_snapshots.rs  e2e_phase_1_1.rs  event_signals.rs  one_cell_change.rs  scene_bytes_test.rs
crates/happyterminals-backend-ratatui/tests/snapshots/: color_snapshots__bunny_ansi16.snap  color_snapshots__bunny_mono.snap  color_snapshots__bunny_palette256.snap  color_snapshots__bunny_truecolor.snap  color_snapshots__cube_ansi16.snap  color_snapshots__cube_mono.snap  color_snapshots__cube_palette256.snap  color_snapshots__cube_truecolor.snap
crates/happyterminals-core/: Cargo.toml  README.md
crates/happyterminals-core/benches/: memo_eq_skip.rs
crates/happyterminals-core/src/: batch.rs  cell.rs  clock.rs  effect.rs  error.rs  grid.rs  lib.rs  memo.rs  owner.rs  rng.rs  runtime.rs  signal.rs
crates/happyterminals-core/tests/: batch.rs  cycle.rs  diamond.rs  disposal.rs  proptest_batch.rs  proptest_set_get.rs  send_sync.rs  signal_setter.rs  transitions_10k.rs  untracked.rs
crates/happyterminals-dsl/: Cargo.toml  README.md
crates/happyterminals-dsl/src/: builder.rs  json.rs  lib.rs  node_builder.rs  prelude.rs  sandbox.rs
crates/happyterminals-dsl/tests/: builder_smoke.rs  hello_world.rs
crates/happyterminals-input/: Cargo.toml
crates/happyterminals-input/src/: action.rs  binding.rs  context.rs  defaults.rs  drag.rs  input_map.rs  lib.rs  modifier.rs
crates/happyterminals-pipeline/: Cargo.toml  README.md
crates/happyterminals-pipeline/benches/: pipeline_overhead.rs
crates/happyterminals-pipeline/src/: adapter.rs  effect.rs  error.rs  lib.rs  pipeline.rs
crates/happyterminals-pipeline/src/effects/: mod.rs
crates/happyterminals-pipeline/tests/: smoke.rs
crates/happyterminals-renderer/: Cargo.toml  README.md
crates/happyterminals-renderer/benches/: renderer_alloc.rs
crates/happyterminals-renderer/src/: camera.rs  cube.rs  lib.rs  mesh.rs  particle.rs  projection.rs  rasterizer.rs  shading.rs
crates/happyterminals-renderer/tests/: obj_corpus.rs  snapshot.rs  stl_corpus.rs  z_fighting.rs
crates/happyterminals-renderer/tests/fixtures/stl/: small_mesh.stl
crates/happyterminals-renderer/tests/snapshots/: snapshot__snapshot_cube_custom_ramp.snap  snapshot__snapshot_cube_default_ramp.snap
crates/happyterminals-scene/: Cargo.toml  README.md
crates/happyterminals-scene/src/: camera.rs  easing.rs  error.rs  graph.rs  ir.rs  lib.rs  node.rs  prop.rs  scene.rs  transition.rs  transition_effect.rs
crates/happyterminals-scene/tests/: scene_graph.rs  scene_types.rs
crates/happyterminals/examples/: static_grid.rs
crates/happyterminals/examples/color-test/: main.rs
crates/happyterminals/examples/json-loader/: main.rs
crates/happyterminals/examples/model-viewer/: main.rs
crates/happyterminals/examples/particles/: main.rs
crates/happyterminals/examples/showcase/: main.rs
crates/happyterminals/examples/spinning-cube/: main.rs
crates/happyterminals/examples/text-reveal/: main.rs
crates/happyterminals/examples/transitions/: main.rs
crates/happyterminals/src/: lib.rs
docs/decisions/: stack-rationale.md
examples/models/: README.md
examples/recipes/: hello.json
scripts/: convert-recording.sh  doc-lint-examples.sh  doc-lint.sh  record-showcase.sh  smoke-examples.sh
(+73 files in other folders)
