[package]
name         = "happyterminals-backend-ratatui"
description  = "Ratatui/crossterm event loop and TerminalGuard (RAII + panic hook) for happyterminals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
happyterminals-core = { workspace = true }
ratatui             = { workspace = true }
ratatui-crossterm   = { workspace = true }
crossterm           = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "macros", "test-util"] }

[lints]
workspace = true
