[package]
name         = "happyterminals-core"
description  = "Reactive primitives (Signal / Memo / Effect) and Grid buffer for the happyterminals scene manager."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
# `effects` feature must be enabled so `ImmediateEffect::new_mut_scoped` actually
# runs its closure; without it `reactive_graph` short-circuits the constructor
# to a dead handle (`Self { inner: None }`). Required for REACT-03.
reactive_graph = { workspace = true, features = ["effects"] }
thiserror      = { workspace = true }
rand           = { workspace = true }
# send_wrapper: direct dep for `runtime::wrap_local_fnmut` (SendWrapper<RefCell<FnMut>>
# payload for ImmediateEffect::new_mut_scoped). reactive_graph 0.2.13 uses this
# internally but does NOT re-export it at `send_wrapper_ext::SendWrapper`, so we
# depend on it directly. Version matches reactive_graph's transitive choice.
send_wrapper         = "0.6"
ratatui-core         = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width        = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
proptest          = { workspace = true }
criterion         = { workspace = true }
static_assertions = "1.1"

[features]
test-util = []

[[bench]]
name    = "memo_eq_skip"
harness = false

[lints]
workspace = true
