[package]
name         = "happyterminals-dsl"
description  = "Declarative scene builder (Rust) and JSON recipe loader for happyterminals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
happyterminals-scene    = { workspace = true }
happyterminals-core     = { workspace = true }
happyterminals-renderer = { workspace = true }
happyterminals-pipeline = { workspace = true }
glam                    = { workspace = true }

[dev-dependencies]
happyterminals-core = { workspace = true }

[lints]
workspace = true
