[package]
name         = "happyterminals-pipeline"
description  = "Effect pipeline (`dyn Effect` trait objects) and tachyonfx adapter for happyterminals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
happyterminals-core = { workspace = true }
tachyonfx           = { workspace = true }
ratatui-core        = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }

[[bench]]
name    = "pipeline_overhead"
harness = false

[lints]
workspace = true
