[package]
name         = "happyterminals-renderer"
description  = "ASCII 3D rasterizer (z-buffer, perspective projection, OBJ/STL loading) for happyterminals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
# Empty during Phase 0.

[lints.rust]
unsafe_code = "allow"  # reserved for future SIMD in hot paths; JUSTIFY before use.

[lints.clippy]
# Inherit workspace clippy lints even though [lints] isn't using workspace=true.
# (Can't use `workspace = true` alongside a specific override in the same [lints] table.)
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro   = "deny"
