[package]
name         = "happyterminals-renderer"
description  = "ASCII 3D rasterizer (z-buffer, perspective projection, OBJ/STL loading) for happyterminals."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
glam = { workspace = true }
happyterminals-core = { path = "../happyterminals-core" }
ratatui-core = { workspace = true }
thiserror = { workspace = true }
stl_io = { workspace = true }
tobj = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "renderer_alloc"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro   = "deny"
