[package]
name         = "happyterminals-scene"
description  = "Scene IR and scene-graph types consumed by every front-end (Rust builder, JSON, Python)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
happyterminals-core     = { workspace = true }
happyterminals-renderer = { workspace = true }
happyterminals-pipeline = { workspace = true }
glam                    = { workspace = true }
ratatui-core            = { workspace = true }
thiserror               = { workspace = true }

[dev-dependencies]
happyterminals-core = { workspace = true }

[lints]
workspace = true
