[package]
name         = "happyterminals"
description  = "Meta crate — curated public re-exports (prelude, run, common types)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[dependencies]
happyterminals-core            = { workspace = true }
happyterminals-scene           = { workspace = true }
happyterminals-dsl             = { workspace = true }
happyterminals-renderer        = { workspace = true }
happyterminals-pipeline        = { workspace = true }
happyterminals-backend-ratatui = { workspace = true }
ratatui-core                   = { workspace = true }
glam                           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[lints]
workspace = true
